# conference-management

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.code_quality/: .pylintrc
.github/workflows/: ci.yml
app/: .env_example  config.py  conftest.py  requirements.txt  seed_data.py
app/adapters/api/: dependencies.py
app/adapters/api/endpoints/: auth.py  session.py  user.py
app/adapters/database/models/: __init__.py  permission_model.py  role_model.py  role_permission_model.py  session_attendee_model.py  session_model.py  speaker_assignment.py  speaker_model.py  user_model.py  user_role_model.py
app/adapters/database/repository/: session_repository.py  user_repository.py
app/alembic/versions/: 04eae8330072_initial_migrations.py  3a953255b3c7_add_session_models.py  6782476d034d_initial_migration_with_session_and_user.py  7d58b669b76b_modify_speaker_assignment_model.py
app/core/auth/: schemas.py  services.py  user_service.py
app/core/auth/ports/: repository.py
app/core/auth/tests/: test_user_api.py
app/core/common/: pagination.py  test_base.py
app/core/session/: schemas.py  services.py
app/core/session/ports/: session_repository.py
app/core/session/tests/: test_session_api.py
app/dependencies/: auth_service.py  authorizer.py  session_service.py  user_repository.py  verify_permission.py
app/fast_api/: fast_api_app.py
